src/App.css
body {
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: grayscale;
}

@media only screen and (min-width: 768px) {
  .ui.container {
    width: 700px;
    max-width: 700px;
  }

nav.ui.container {
  position: absolute;
  top: 0;
  width: 1200px;
}

  nav.ui.container .ui.header {
    float: left;
    margin-top: 12px;
    font-family: "Avenir Next", Helvetica, Arial, sans-serif;
  }

  nav.ui.container .ui.inverted.compact.menu {
    float: right;
  }


}

@media only screen and (max-width: 991px) {
  #top-section  {
    padding-left: 50px;
    padding-right: 50px;
    text-align: center;
  }

  #top-section .left-column {
    min-width: 400px;

  }

  #top-section .right-column {
    min-width: 350px;

  }

  #top-section .tile-segment {
    padding-left: 0;
    padding-right: 0;
  }


  #main-grid {
    margin: 0 auto;
    text-align: center;
    /* margin: auto; */
    position: relative;
    left: 0;
  }

  #top_tile {
    /* margin-left: 30%;
    margin-right: 30%; */
    margin: 0 auto;
  }

}

@media only screen and (max-width: 768px) {
  #carousel .carousel-container{
    display: none;
  }

  #carousel .carousel-container-mobile {
    display: block !important;
  }

  #carousel .buttonPanel {
    width: 100px !important;
    right: 50px !important;
    margin-left: 100px !important;
  }


  #video .video-screen {
    /* margin-right: 100px; */
    width: 100%;
  }

}

@media only screen and (max-width: 590px) {
  #carousel .buttonPanel {
    width: 100px !important;
    height: 50px !important;
    right: 200px !important;
    margin-left: 100px !important;
  }

}


.ui.inverted.vertical.center.aligned.segment {
  padding-top: 36px;
}

nav.ui.container .ui.inverted.compact.menu {
  background-color: rgb(51, 51, 51);
}

nav.ui.container .ui.inverted.compact.menu .item {
  padding-bottom: 0;
}

nav.ui.container .ui.inverted.compact.menu .item {
  font-size: 16px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 14px;
  margin-left: 16px;
  margin-right: 16px;
  border-radius: 0;
}

nav.ui.container .ui.inverted.compact.menu .active.item {
  background-color: inherit;
  border-bottom-color: white;
  border-bottom-style: solid;
  border-bottom-width: 2px;
}

#nav-menu {
  float: right;
  margin-top: 3%;
  margin-right: -15%;
  font-family: "Avenir";
}

#nav-left {
  margin-left: 10%;
  margin-top: 3%;
}

.ui.inverted.vertical.segment {
  height: 100vh;
  background-color: rgb(51, 51, 51);
}

.ui.vertical.segment {
  padding-top: 36px;
  padding-left: 100px;
  padding-right: 100px;
  padding-bottom: 100px;
  min-height: 100vh;
  font-family: "Avenir Next", Helvetica, Arial, sans-serif;
}

.ui.content.container {
  height: 300px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.ui.content.container h1.header {
  font-size: 60px;
  color: rgb(51, 51, 51);
  font-family: "Avenir Next", sans-serif;
}

.ui.content.container h2.header {
  font-size: 32px;
  color: rgb(51, 51, 51);
  font-family: "Avenir Next", Helvetica, Arial, sans-serif;
}

.ui.content.container p {
  font-size: 20px;
  line-height: 1.6;
  font-weight: 300;
  font-family: "Avenir Next", Helvetica, Arial, sans-serif;
}

.ui.inverted.vertical.segment footer.ui.segment {
  height: 80px;
  width: 100%;
  position: absolute;
  bottom: 0;
  color: gray;
}

.ui.inverted.vertical.segment footer.ui.segment a {
  color: white;
}

#main-grid .left-column{
  position: relative;
  left: 60px;
  min-height: 800px;
  margin-bottom: 30px;
}

#top-section {
  /* min-height: 850px; */
  padding-bottom: 0;
}

#top-section .main-header{
  font-family: Avenir Next;
font-style: normal;
font-weight: 600;
font-size: 44px;
line-height: 60px;

color: #333333;
}

#top-section .main-content {
  font-family: Avenir Next;
font-style: normal;
font-weight: 500;
font-size: 20px;
line-height: 36px;
/* or 180% */


color: #333333;
}



#top-section .container-content {
  width: 90%;
  min-height: 300px;
  /* overflow: scroll; */
  position: relative;

}

#top-section .segment-content {
  padding-left: 0;
  padding-right: 30px;
  margin-top: 200px;
}

#submit-button {
  font-family: Avenir Next;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 36px;
  /* identical to box height, or 180% */
  color: #2F80ED;
  background-color: white;
  margin-left: 0;
  padding-left: 0;
}

/* #top_tile {
  position: relative;
  top: 100px;
  min-height: 583px;
} */

#top_tile .read_more{
  border: 2px solid #2F80ED;
  box-sizing: border-box;
  border-radius: 5px;
  font-style: normal;
  font-weight: bold;
  font-size: 15px;
  line-height: 30px;
/* identical to box height, or 200% */
  padding: 5px;
  padding-left: 24px;
  padding-right: 24px;
  text-align: center;
  /* margin-bottom: 20px; */
}

#top_tile .category {
  font-family: Avenir Next;
font-style: normal;
font-weight: 600;
font-size: 18px;
line-height: 28px;
/* or 156% */
margin-left: 20px;

color: #2F80ED;
}

#top_tile .number {
  font-family: Avenir Next;
font-style: normal;
font-weight: bold;
font-size: 24px;
line-height: 36px;
/* identical to box height, or 150% */


color: #2F80ED;
}

#top_tile .featured {
  font-family: Avenir Next;
font-style: normal;
font-weight: bold;
font-size: 14px;
line-height: 19px;

color: #AAB3C0;

border-radius: 15px;
}

#top_tile .description{
  font-family: Avenir Next;
font-style: normal;
font-weight: 500;
font-size: 14px;
line-height: 28px;
margin-left: 20px;

}

#top_tile .name {
  font-family: Avenir Next;
font-style: normal;
font-weight: 600;
font-size: 28px;
line-height: 36px;
/* or 129% */

text-align: center;

color: #333333;
}


#top_tile .row {
  padding: 4px;
}

#top_tile .year {
  font-family: Avenir Next;
font-style: normal;
font-weight: bold;
font-size: 16px;
line-height: 36px;
/* or 225% */

text-align: center;

color: #A8AAB5;
}
/* ... */

